Add is in progress field on phases
