# lib/go_champs_api_web/views/phase_view.ex
@@ -17,6 +17,7 @@ defmodule GoChampsApiWeb.PhaseView do
         eliminations: render_many(phase.eliminations, EliminationView, "elimination.json"),
         elimination_stats:
           render_many(phase.elimination_stats, PhaseView, "elimination_stats.json"),
+        is_in_progress: phase.is_in_progress,
         title: phase.title,
         type: phase.type
       }
@@ -26,6 +27,7 @@ defmodule GoChampsApiWeb.PhaseView do
   def render("phase.json", %{phase: phase}) do
     %{
       id: phase.id,
+      is_in_progress: phase.is_in_progress,
       order: phase.order,
       title: phase.title,
       type: phase.type
